<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BestWeatherGameEverActivity!</string>
    <string name="app_name">BestWeatherGameEver</string>
    <string name="theBestWeatherGameEver">The Best Weather Game Ever</string>
    <string name="choose_difficutly">Choose the difficulty</string>
    <string name="easy_button">Easy</string>
    <string name="middleButton">Medium</string>
    <string name="hardButton">Hard</string>
    <string name="PunktestandAnzeige">Score: 0</string>
    <string name="levelAnzeige">&quot;Level: 0</string>
    <string name="stadt">City</string>
    <string name="enterButton">Enter</string>
    <string name="wheel">wheel</string>
    <string name="userAnswer">userAnswer</string>
    <string name="currentTemperature">currentTemperature</string>
    <string name="deviation">deviation</string>
    <string name="currentLevel">currentLevel</string>
    <string name="currentPoints">currentPoints</string>
    <string name="Help">Help</string>
    <string name="Reset_Score">Reset Score</string>
</resources>