<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgimage">

    <Button
        android:id="@+id/middleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/middleButton"
        android:onClick="onClickMedium" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/middleButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/hardButton"
        android:onClick="onClickHard" />

    <TextView
        android:id="@+id/PunktestandAnzeige"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hardButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/PunktestandAnzeige"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/middleButton"
        android:layout_alignRight="@+id/hardButton"
        android:layout_marginBottom="33dp"
        android:text="@string/easy_button"
        android:onClick="onClickEasy" />

    <TextView
        android:id="@+id/chooseDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/easyButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"
        android:text="@string/choose_difficutly"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/theBestWeatherGameEver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/theBestWeatherGameEver"
        android:textAppearance="?android:attr/textAppearanceLarge" />

      <com.google.ads.AdView
          android:id="@+id/adView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          ads:adSize="BANNER"
          ads:adUnitId="a14fe9af8bedc8a"
          ads:loadAdOnCreate="true" >
      </com.google.ads.AdView>

      <TextView
          android:id="@+id/LevelAnzeige"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/hardButton"
          android:layout_below="@+id/PunktestandAnzeige"
          android:text="@string/levelAnzeige"
          android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>